# recursive-self-improvement

./: .gitignore
ablation-studies/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
ablation-studies/configs/: debug.yaml  default.yaml
ablation-studies/scripts/: check_power.py  generate_paper_assets.py  generate_report.py  run_all_suites.py  run_suite.py
ablation-studies/src/: __init__.py
ablation-studies/tests/: conftest.py  test_godel_suite.py  test_integration.py  test_latex_output.py  test_neurosymbolic_suite.py  test_rlm_suite.py  test_soar_suite.py
arch-comparison/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
arch-comparison/configs/: debug.yaml  default.yaml  hybrid.yaml  integrative.yaml
arch-comparison/scripts/: generate_report.py  package_deliverables.py  run_comparison.py  run_single_axis.py  train_integrative.py
arch-comparison/src/: __init__.py
arch-comparison/tests/: __init__.py  conftest.py  test_constrained_decoder.py  test_generalization.py  test_hybrid_pipeline.py  test_integration.py  test_interpretability.py  test_lnn_layer.py  test_robustness.py
constraint-preservation/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
constraint-preservation/configs/: default.yaml  relaxed.yaml  strict.yaml
constraint-preservation/scripts/: calibrate_thresholds.py  generate_report.py  run_check.py  run_headroom.py
constraint-preservation/src/: __init__.py
constraint-preservation/tests/: conftest.py  test_accuracy_floor.py  test_constraint_suite.py  test_enforcement.py  test_entropy_floor.py  test_gate.py  test_integration.py  test_safety_eval.py
ctm-integration/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
ctm-integration/configs/: debug.yaml  default.yaml  math_domain.yaml
ctm-integration/scripts/: build_ctm_table.py  evaluate_library.py  generate_report.py  run_comparison.py  run_synthesis.py
ctm-integration/src/: __init__.py
ctm-integration/tests/: __init__.py  conftest.py  test_analysis.py  test_bdm_scorer.py  test_block_decomposer.py  test_candidate_generator.py  test_candidate_patterns.py  test_compressor.py  test_ctm_table.py  test_empirical_verifier.py  test_integration.py  test_library_extras.py  test_pareto_selector.py  test_rule_library.py  test_rule_refiner.py  test_synthesis_loop.py  test_utils.py
data-contamination-audit/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
data-contamination-audit/configs/: cc_crawls.yaml  default.yaml  full_scale.yaml  medium_scale.yaml  small_scale.yaml
data-contamination-audit/scripts/: build_training_data.py  download_data.py  export_reserve.py  run_audit.py  train_classifier.py
data-contamination-audit/tests/: conftest.py  test_classifier.py  test_data.py  test_embeddings.py  test_integration.py  test_reporting.py  test_reserve.py
gdi/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
gdi/configs/: default.yaml  relaxed.yaml  strict.yaml
gdi/scripts/: calibrate_thresholds.py  collect_reference.py  compute_gdi.py  generate_report.py  run_monitoring.py
gdi/tests/: conftest.py  test_alerting.py  test_calibration.py  test_composite_gdi.py  test_distributional_signal.py  test_hooks.py  test_integration.py  test_lexical_signal.py  test_semantic_signal.py  test_structural_signal.py
godel-agent/: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
godel-agent/configs/: debug.yaml  default.yaml  generalist.yaml  math_specialist.yaml
godel-agent/scripts/: generate_report.py  inspect_history.py  replay_modification.py  run_ablation.py  run_agent.py
godel-agent/tests/: conftest.py  test_analysis.py  test_audit.py  test_audit_extras.py  test_deliberation.py  test_diff_engine.py  test_executor.py  test_inspector.py  test_integration.py  test_meta_components.py  test_meta_loop.py  test_modifier.py  test_proposal_reexport.py  test_rollback.py  test_runtime.py  test_tasks.py  test_validation.py
godel-fragility/: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
godel-fragility/configs/: default.yaml  full.yaml  quick.yaml
godel-fragility/scripts/: generate_report.py  run_complexity_sweep.py  run_single_scenario.py  run_stress_test.py  visualize_failures.py
godel-fragility/tests/: conftest.py  test_adversarial_scenarios.py  test_code_mutators.py  test_complexity_ceiling.py  test_complexity_curve.py  test_comprehension_probe.py  test_controlled_env.py  test_failure_classifier.py  test_failure_landscape.py  test_fault_injector.py  test_fault_injector_extra.py  test_fragility_score.py  test_health_monitor.py  test_integration.py  test_metrics.py  test_recovery_patterns.py  test_recovery_tracker.py  test_report.py  test_stagnation_detector.py  test_stress_runner.py  test_timeout_guard.py
mech-interp/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
mech-interp/configs/: default.yaml  lightweight.yaml
mech-interp/scripts/: check_anomalies.py  compare_snapshots.py  generate_report.py  (+2 more)
model-collapse-baselines/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
prompt-evolution/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
reward-hacking/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
risk-mitigations/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
rlm/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
rlm-evaluation/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
rlm-repl/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
rsi-benchmark/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
rsi-infra/: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
rsi-pipeline/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
soar-evolution/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
soar-hindsight/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
success-criteria/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
symcode/: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
(+1132 files in other folders)
