[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arch-comparison"
version = "0.1.0"
description = "Compare hybrid (LLM+solver) vs integrative (LNN) vs prose baseline architectures"
requires-python = ">=3.9"
dependencies = [
    "sympy>=1.12",
    "z3-solver>=4.12",
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "rich>=13.0",
    "typer>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
