[project]
name = "data-contamination-audit"
version = "0.1.0"
requires-python = ">=3.11"
description = "Pipeline to detect AI-generated content in training corpora and build a clean data reserve."

dependencies = [
    # Data handling
    "datasets>=3.0",
    "warcio>=1.7",
    "mwparserfromhell>=0.6",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "trafilatura>=1.10",

    # Embeddings
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=3.0",

    # Classifier features
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.0",

    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",

    # Config and CLI
    "hydra-core>=1.3",
    "rich>=13.0",
    "typer>=0.12",

    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.optional-dependencies]
gpu = ["flash-attn>=2.5"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
