[project]
name = "godel-agent"
version = "0.1.0"
requires-python = ">=3.9"
description = "Self-referential agent that modifies its own meta-learning algorithm with rollback-guarded validation."

dependencies = [
    "openai>=1.30",
    "anthropic>=0.30",
    "transformers>=4.40",
    "asttokens>=2.4",
    "deepdiff>=7.0",
    "pygments>=2.18",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "scipy>=1.13",
    "hydra-core>=1.3",
    "rich>=13.0",
    "typer>=0.12",
    "wandb>=0.17",
    "filelock>=3.15",
    "dill>=0.3.8",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
