[project]
name = "godel-fragility"
version = "0.1.0"
requires-python = ">=3.9"
description = "Adversarial stress testing of the self-modifying Gödel Agent."

dependencies = [
    "asttokens>=2.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "hydra-core>=1.3",
    "rich>=13.0",
    "typer>=0.12",
    "dill>=0.3.8",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
