[project]
name = "model-collapse-baselines"
version = "0.1.0"
requires-python = ">=3.11"
description = "Empirical demonstration of model collapse via recursive model lineages."

dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "accelerate>=0.30",
    "peft>=0.11",
    "bitsandbytes>=0.43",
    "datasets>=3.0",
    "trl>=0.9",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "sentence-transformers>=3.0",
    "nltk>=3.9",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "numpy>=1.26",
    "hydra-core>=1.3",
    "rich>=13.0",
    "typer>=0.12",
    "wandb>=0.17",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.optional-dependencies]
gpu = ["flash-attn>=2.5"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
