[project]
name = "rsi-infra"
version = "0.1.0"
requires-python = ">=3.11"
description = "Shared infrastructure for RSI experiments: sandboxed REPL, symbolic math, experiment tracking with safety metrics."

dependencies = [
    "docker>=7.0",
    "modal>=0.64",
    "sympy>=1.13",
    "z3-solver>=4.13",
    "wandb>=0.17",
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "hydra-core>=1.3",
    "rich>=13.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "filelock>=3.15",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["repl*", "symbolic*", "tracking*", "sdk*"]

[tool.pytest.ini_options]
testpaths = ["repl/tests", "symbolic/tests", "tracking/tests", "tests"]
pythonpath = ["."]
asyncio_mode = "auto"
import_mode = "importlib"
