[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "soar-hindsight"
version = "0.1.0"
description = "Convert evolutionary search trajectories into fine-tuning data for the SOAR self-improvement loop"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
