[project]
name = "symcode"
version = "0.1.0"
requires-python = ">=3.11"
description = "LLM mathematical reasoning via executable SymPy code generation with verification and self-correction."

dependencies = [
    "openai>=1.30",
    "anthropic>=0.30",
    "transformers>=4.40",
    "sympy>=1.13",
    "z3-solver>=4.13",
    "datasets>=3.0",
    "huggingface-hub>=0.23",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.13",
    "hydra-core>=1.3",
    "rich>=13.0",
    "typer>=0.12",
    "wandb>=0.17",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
